# software-engineer-interview-prep-kit

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
behavioral/: index.html
coding/: index.html
docs/: behavioral.md  coding.md  glossary.md  index.md  system-design.md  troubleshooting.md
glossary/: index.html
search/: search_index.json
system-design/: index.html
troubleshooting/: index.html
