[tool.poetry]
name = "software-engineer-interview-preparation-kit"
version = "0.1.0"
description = ""
authors = ["SoftwareBloat"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
